--- a/website.html
+++ b/website.html
@@ -35,28 +35,23 @@ body {
 <body>
 <h1 style="color:aquamarine;">Welcome to the Music Mash-up Website</h1>
 
-<!-- Buttons to add the .wav files, carolina found the input functions --->
+<!-- Buttons to add the .wav files then press the upload button to upload the files to the python code --->
 <form method=post enctype=multipart/form-data>
 <p2 style = "color:aquamarine;"> Press button to add song, use a .wav file </p2>
-<button1 class="button"><input type=file name=file>
+<button1 class="button"><input type=file name1=file>
          <input type=submit value=Upload></button1>
 <h2></h2>
 <p3 style = "color:aquamarine;"> Press button to add song, use a .wav file</p3>
-<button2 class="button"><input type=file name=file>
+<form method=post enctype=multipart/form-data>
+<button2 class="button"><input type=file name2=file>
          <input type=submit value=Upload></button2>
 <h3></h3>
 <p4 style = "color:aquamarine;"> Press button to add song, use a .wav file</p4>
-<button3 class="button"><input type=file name=file>
-         <input type=submit value=Upload></button3>
 <form method=post enctype=multipart/form-data>
-    <!---  <p><input type=file name=file>
-         <input type=submit value=Upload>
-         <form method=post enctype=multipart/form-data>
-      <p><input type=file name=file>
-         <input type=submit value=Upload>
-         <form method=post enctype=multipart/form-data>
-      <p><input type=file name=file>
-         <input type=submit value=Upload>
+<button3 class="button"><input type=file name3=file>
+         <input type=submit value=Upload></button3>
+
+
 <!--this shows the load bar -->
 <h4></h4>
 <audio controls>
